# modal_audiobook

./: .gitignore  CLAUDE.md  CODEBASE.md  README.md  batch_convert.py  main.py  pyproject.toml
modal_app/: image.py  tts_service.py
src/: __init__.py  config.py  epub_parser.py  text_chunker.py
