[project]
name = "modal-audiobook"
version = "0.1.0"
description = "Convert EPUB files to MP3 audiobooks using Modal and Qwen3-TTS"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.64.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "modal_app"]
